完成交易签名部分总结

--- a/ethernum-source-code-reading/交易签名.md
+++ b/ethernum-source-code-reading/交易签名.md
@@ -1,5 +1,5 @@
 ## 交易签名
-### 一. 对交易进行签名。
+### 一. 传入参数
 > go-ethereum/internal/ethapi/api.go:1356
 ```go
 // SignTransaction will sign the given transaction with the from account.
@@ -30,7 +30,7 @@ func (s *PublicTransactionPoolAPI) SignTransaction(ctx context.Context, args Sen
 }
 ```
 
-### 二. 发送交易需要的参数
+### 二. 发送交易的结构体
 ```go
 // SendTxArgs represents the arguments to sumbit a new transaction into the transaction pool.
 type SendTxArgs struct {
@@ -98,7 +98,7 @@ data和value最少要有一个。
 
 > 在第一步中，我们可以看出，这个函数的参数：gas,gasPrice,nonce不允许为空。
 
-### 四. 获取接收方的交易信息
+### 四. 判断交易类型
 由上一步我们可知接收方为空，那么这个交易是创建合约的交易，如果不为空，则为普通交易。
 ```go
 func (args *SendTxArgs) toTransaction() *types.Transaction {
@@ -323,7 +323,7 @@ func (w *ledgerDriver) ledgerSign(derivationPath []uint32, tx *types.Transaction
 ```
 > 首先根据钱包地址的派生地址，获取到一个byte数组，然后对交易的其他信息进行rlp编码获取到byte数组，将这两个数组进行拼接，得到了`payload`
 
-> 对payload的前255位进行数据转换，也就是`ledgerExchange函数`,得到`reply`,payload剩余的更新为新的`payload`
+> 对payload的前255位进行数据转换，也就是`ledgerExchange函数`,得到`reply`,payload剩余的更新为新的`payload`，然后循环此过程，直到`payload`的长度为0
 
 > 此时得到的`reply`长度为65。将收割字节移到末尾，得到了byte数组`signature`，并根据chainID对最后一个字节进行处理。
 
@@ -429,4 +429,18 @@ Sender函数中的算法较复杂，这里不做详细记录。大体是根据`s
 回到第一步，对得到的含有r,s,v的结构体进行加密，并将加密和未加密的数据放到一个结构体中返回。
 
 ## 最后，整理下大体流程。
-1. 
+1. 对参数设置默认值，并判断是普通交易还是创建合约的交易。
+2. 根据配置文件获取chainID。chainID的种类会放在文章最后
+3. 获取发送方地址的派生地址
+4. 根据一些计算，由派生地址可以得到一个字节数组
+5. 对交易的其他信息（nonce、gas等）进行rlp编码，等到一个字节数组
+6. 对前两步的字节数组和平，第四步获得的字节数组在前。得到了一个新的字节数组`payload`
+7. 对上一步中获取到的`payload`进行复杂的计算，得到一个65个字节长度的字节数组`replay`
+8. 将`replay`的首字节放到末尾，再跟chainID做处理，得到`signature`.同时跟进chainID获取到了签名者
+9. 由`signature`可以得到r,s,v,分别是其前32位，32-64位，最后一位+27.
+10. 跟进得到的r,s,v经过`secp256k1`算法推导出发送者地址
+11. 判断推导出的地址和实际的发送者的地址是否一样，不一样的话，返回错误信息
+12. 钱包地址一样的话，对r,s,v进行rlp编码，并将位编码和已编码的内容发送结构体中返回。
+
+## 疑问
+签名过程中，没有发现用到私钥的地方，只用到了钱包地址的派生地址。
